force-app/main/default/objects/Dexterity__c/Dexterity__c.object-meta.xml
<CustomObject>
    <label>Dexterity</label>
    <nameField>
        <label>Dexterity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decterity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>