force-app/main/default/objects/Dexterity__c/fields/Acrobatics__c.field-meta.xml
<CustomField>
    <fullName>Acrobatics__c</fullName>
    <label>Acrobatics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>