force-app/main/default/objects/Dexterity__c/fields/Sleight_of_hand__c.field-meta.xml
<CustomField>
    <fullName>Sleight_of_hand__c</fullName>
    <label>Sleight of hand</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>