force-app/main/default/objects/Dexterity__c/fields/Stat__c.field-meta.xml
<CustomField>
    <fullName>Stat__c</fullName>
    <formula>Acrobatics__c +  Saving_Throws__c +  Sleight_of_hand__c +  Stealth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>