force-app/main/default/objects/Dexterity__c/fields/Stealth__c.field-meta.xml
<CustomField>
    <fullName>Stealth__c</fullName>
    <label>Stealth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>